# ChangeLog for media-plugins/live
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $

  01 Jul 2011; Nathan Phillip Brink <binki@gentoo.org> live-2011.06.16.ebuild:
  Reduce the difference between gentoo-x86's ebuild and my patched version,
  hopefully making it more acceptable to gentoo-x86 people.

*live-2011.06.16 (01 Jul 2011)

  01 Jul 2011; Nathan Phillip Brink <binki@gentoo.org> -live-2011.03.14.ebuild,
  +live-2011.06.16.ebuild:
  Bump to live-2011.06.16, keeping changes necessary to fix bug 309681.

  13 May 2011; Nathan Phillip Brink <binki@gentoo.org>
  live-2011.03.14.ebuild:
  Fix duplicate eclasses in inherit line.

  12 May 2011; Nathan Phillip Brink <binki@gentoo.org>
  live-2011.03.14.ebuild:
  Fix LIVE_ABI_VERSION to match the gentoo-x86 ebuild and move to EAPI=4.

  12 May 2011; Nathan Phillip Brink <binki@gentoo.org>
  -files/live-2009.06.02-as-needed.patch,
  -files/live-2009.06.02-buildorder.patch,
  files/live-2009.06.02-libdeps.patch,
  files/live-2009.09.28-buildorder.patch, -live-2011.01.24.ebuild,
  +live-2011.03.14.ebuild:
  Bump to live-2011-03-14. Rework the ebuild to look more like gentoo-x86's.
  Fixes ohnopub bug 22.

  24 Mar 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  -live-2009.06.02.ebuild, live-2011.01.24.ebuild, files/config.gentoo,
  +files/config.gentoo-so-r1:
  Match live ebuild up more closely with the gentoo-x86-cvs version. Drop
  live-2009.06.02. Fix building live without live being previously installed
  (was trying to link against previously-installed live libraries).

  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  live-2009.06.02.ebuild, live-2011.01.24.ebuild:
  Fix missing dependencies on sys-devel/libtool which caused novae a
  compilation error.

  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>