@@ -1,29 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX config.gentoo 547 RMD160 db872641e2a0f3352554c15a7f561894fdb2aa37 SHA1 add31e3f3888906ad6ce8178735cad0d08a0e510 SHA256 51b798a297e16fe7cc281471671c64e123a1588108fbbf87a974b73b0b50c0dd
-AUX config.gentoo-so-r1 601 RMD160 3ee8f50dd9466449057df6022994bff76b6a99db SHA1 b9e045681ffad767c2483d5ede7dd7109b54b231 SHA256 eb33f62e18b8e847d5730bd31f2b22e99339d46cfa32750233df959743aec313
+AUX config.gentoo-r1 547 RMD160 db872641e2a0f3352554c15a7f561894fdb2aa37 SHA1 add31e3f3888906ad6ce8178735cad0d08a0e510 SHA256 51b798a297e16fe7cc281471671c64e123a1588108fbbf87a974b73b0b50c0dd
+AUX config.gentoo-so-r2 601 RMD160 3ee8f50dd9466449057df6022994bff76b6a99db SHA1 b9e045681ffad767c2483d5ede7dd7109b54b231 SHA256 eb33f62e18b8e847d5730bd31f2b22e99339d46cfa32750233df959743aec313
 AUX live-2009.06.02-libdeps.patch 2833 RMD160 80f07321bada4d5b4eef24543247f0dc2cd436ce SHA1 5b7aa6e488a8fd638b1312b932dbcc9c58c3251c SHA256 94020b317ef52fa3bdcb58208eb4b1e568fbd0494fad22f8e9a94a8a6fe8d1ec
 AUX live-2009.09.28-buildorder.patch 1070 RMD160 c4481e744986254f0f435130479cc1bb7e1ca5b5 SHA1 a29327e0b07daa6ee73c469b994c7982f38c628b SHA256 0c143995cbba68bffd1d7720943500320e59894e587bf951611db9992380e07f
 AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA1 87526904f6e69696f6fbf41a2313f1a43c51871a SHA256 6347a54046cf02671666bf74a3dbb54ebb898adafe9670abecebe86e6d870288
 DIST live.2011.06.16.tar.gz 477340 RMD160 57741f9e3339a3586a5f88002ce48ba8e5cad145 SHA1 bf6610c46bd8ea6730f81290d6eb7b64756729aa SHA256 08b776a28c0a385d83556d5ce3910bf8a32acf67d20022feade0a24d9033bac4
-EBUILD live-2011.06.16.ebuild 3667 RMD160 1e42b9783d6aec37f19033e8d54c36c7cfebe2e2 SHA1 c8afc0c033632551bcfec9823308d3cd752d2de4 SHA256 2a3b8ab2deb3ef845f16c6855a1c720bc93d66214ff79e1d40cc91d155b85ae3
-MISC ChangeLog 18916 RMD160 1085398e98d1325523c275360fc5e90c162fec3a SHA1 e84ca9e42c7e0da6c6d5e7fa7c30b7b9caf125cd SHA256 28d63f9216f4ac6c1bb316c0f8686b2cb2433b39aa834d779a5764784a6598f7
+EBUILD live-2011.06.16.ebuild 3679 RMD160 fe69254fc0ce30da25e53eeeaac932adfbff5eaa SHA1 0ce88add38d3e3bc2f1cb81788951d1afe2277da SHA256 f898280dd1d33f4d94e7967c4bdf2a452408fe097b07650f576dc40fd54df04d
+MISC ChangeLog 19272 RMD160 76b3e6a065b4bbe34afc77ee2255398df6f96a90 SHA1 eb51c3f30a7ac8c13e11bad0e513b4b1e1991676 SHA256 05bafb4ef6e20a6869e31b1145960aeec04f1fddaa95fd461ec6b61659943147
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJODlThAAoJEHQ6UuhrqBBQh8kP/3w639RHviGiwnXxwft5TC+m
-JAtISXhl7Xty3NfECRxjBuDrFpixFpnu8AfpmBa9WnPbM6aRyj9phK6P3mdqLc2z
-vHHXCa6AU+LKHfYKRAlJvgUW9eZhQwlHH7duMEAaqsfBu1E1k5MU7O6GebbeidOG
-3FBnvt/AZg0OQj18l4a4MjZntluRwzCMFLBWNhg/L2SLI2HPtb/7DSnCLwp6OpW1
-53eJmeDJ30Qm3/SnJNSh6iaDE6G5PNodxIRiMc5kYMYiIFtQvB3KrP0wa9PIHA15
-Mvr0QcjSzTG5WZX5KnWNgqH+lgNE/VWltzkTW3UVmhu8FcigrizPO6m5Hn2u4ZF6
-u+rwD5aE0V9iYiFhMuTBLBaMXTSjhK0Aa5grhOawJg/usgUoEzxfkt1eEgakOa5I
-iyALn9f/Eo5N1uWIS0JltTpj23q3yqnI/WyNcbqGLT6FhCaQUvyjoDZJdEnUhmnr
-6irrHrJujqcc3q1EpfA5Lcl0LCJakffCFd5Jq7yzRxWiAZaung97Mlr0dZXK/sCq
-6loFPHSpW9rJUSkJH3tEYfIqL/K/1fCqLlgP6BuLdNsz4zws+yy5WPmimAyFTTEa
-Rw9f6zFwiwsMM5P4bJQ/GPQ3gZHdsVXGjLPRqAYL7Sz7V/LCCSXiLOME/UzI8SRf
-l3b4xrZWiog26GOgCV6K
-=Q+2J
+iQIcBAEBCAAGBQJODlf6AAoJEHQ6UuhrqBBQVxEP/0UlVVSBynD0WGGL2Kz7hqHu
++WFdP+dmO5l/oyvnIEHOC2vy6AW0bRxHusculdhAMMAnGcWBVJ4HV07+t9OknnKi
+RjmGQJyJbP9Y8wOvls7pAYeBKu5Nc2inSO9WcIwW0RFVsm6QfkLWKzZW7OJlgYL7
+pHxA1svPfDGWpm6YeelhHjxsaGDRZyJcE/X8CGSQaUiUamcxLYKqb8tk1pAXQaB3
+kEl9VA6QOS8TiSd4RvxB9xYrcZ6+9cmk6w0E9l78oCc+8aKxER4VCrHNtR8FCn3E
+9N2UzG7Z8pvFI0os6CVWOUr/PvwECf+0lzUfohxGksizPxnMRc8lxGrpiHtMQVTF
+wJG/KAcfkitRLlk4nQepdNX/Ol/hpdEbtUnHKpYqVfYw+7JCIKtuO/Q0fll+FANB
+aiQ2NV4D1OOAO5P0jBji4f3krYz11TjR5vJNAgs6q81R4CoP0sp+tKW7YXz3B9sE
+Ob1b57YF8zKFn2ZZndH+tlh3kDZ6OzfIX+jcS/6wwCcybnWO7f8NJP0wi+se47mB
+gtidwUFrKRvelwX/I2XeIWrk+HUlem/YMQOvbQCGh9PmLuVQsGUsX75VbxyoSvcU
+ejEIHFmnvMqi+r0E2nPSKub2fRn8X5qe/szO9UDgio1zFGBdVofpnfofm8J4xO2y
+KOoMuXfEbIDDcN2CtARd
+=4ykb
 -----END PGP SIGNATURE-----
