@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $
 
+  01 Jul 2011; Nathan Phillip Brink <binki@gentoo.org> live-2011.06.16.ebuild,
+  +files/config.gentoo-r1, +files/config.gentoo-so-r2, -files/config.gentoo,
+  -files/config.gentoo-so-r1:
+  Rename files/config.gentoo and files/config.gentoo-so-r1 to have new
+  revisions (-r1 and -r2 respectively) because that would make sense for the
+  gentoo-x86 ebuild.
+
   01 Jul 2011; Nathan Phillip Brink <binki@gentoo.org> live-2011.06.16.ebuild:
   Reduce the difference between gentoo-x86's ebuild and my patched version,
   hopefully making it more acceptable to gentoo-x86 people.
